Resize and prevent image cropping
Ensure full hero-section image visible regardless of viewport width.
On xs screens gallery section renders only 1 column, then 2, then 4.

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,13 +28,32 @@ section {
 }
 
 #hero-section {
-    background-image: url('../images/crosstrek6.jpg');
-    background-size: cover;
-    background-position: center;
+    background: center / cover url('../images/crosstrek6.jpg');
     min-height: 100vh;
     display: flex;
     align-items: end;
     color: white;
+}
+
+@media (max-width: 768px) {
+    #hero-section {
+        min-height: calc(100vh-50px);
+        position: relative;
+        top: 50px;
+        padding-top: 0px !important;
+        background: none !important;
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    #hero-section > .container {
+        width: 100%;
+        background-color: black;
+        color: white;
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    
 }
 
 #heroActionButton {
